[package]
name = "launcher"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2.0", features = ["canvas", "tokio", "debug"]}
iced_native = "0.3.0"
iced_futures = "0.2.0"
iced_graphics = "0.1.0"
reqwest = "0.11.1"
rand = "0.8.3"